--- a/examples/README
+++ b/examples/README
@@ -1,4 +1,4 @@
-SUMMON Example usage
+SUMMON Example Usage
 
 These examples introduce the basic features of SUMMON.  They have been numbered
 by increasing complexity.  For a good tutorial, you can read each example and
